# OBS-Advanced-Multiview

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.cn.md  README.md  SETUP.md  buildspec.json  deploy-plugin.ps1  plan.md
.github/: copilot-instructions.md
.github/actions/build-plugin/: action.yaml
.github/scripts/: Package-Windows.ps1  build-macos  package-ubuntu
.github/workflows/: build-project.yaml  push.yaml
cmake/: ndi-output.cmake  spout-output.cmake
cmake/common/: bootstrap.cmake
data/locale/: en-US.ini  zh-CN.ini
docs/: DEVELOPMENT.md  ROADMAP.md  TERMINOLOGY.md  issue-11-external-output-hardening-notes.md  known-limitations.md  obs-isolation-review.md  phase-1-acceptance-checklist.md  phase-1-development-breakdown.md  phase-1-hardening-notes.md  phase-2-acceptance-checklist.md  phase-2-hardening-notes.md  phase-2-visual-settings-design.md  phase-2.5-vu-meter-polish-design.md  phase-3-acceptance-checklist.md  phase-3-signal-lost-and-external-sources-design.md  signal-lost-redesign-design.md  signal-lost-v2-hardening-notes.md  signal-lost-v2-render-migration.md
docs/setup/: DISTRIBUTION.md  README.md  SETUP.md  VS-VERSION-COMPATIBILITY.md  deploy-plugin.ps1
src/: amv-frontend-cache.cpp  amv-frontend-cache.hpp  amv-i18n.hpp  amv-instance-core-draw.cpp  amv-instance-core-health.cpp  amv-instance-core-highlight.cpp  amv-instance-core-image.cpp  amv-instance-core-label.cpp  amv-instance-core-lost-image.cpp  amv-instance-core-safe-area.cpp  amv-instance-core-sources.cpp  amv-instance-core-status.cpp  amv-instance-core-vu.cpp  amv-instance-core.cpp  amv-instance-core.hpp  amv-logging.cpp  amv-logging.hpp  cell-display-settings-dialog.cpp  cell-display-settings-dialog.hpp  config-manager.cpp  config-manager.hpp  edit-source-dialog.cpp  edit-source-dialog.hpp  external-output-settings-dialog.cpp  external-output-settings-dialog.hpp  grid-preview-widget.cpp  grid-preview-widget.hpp  layout-engine.cpp  layout-engine.hpp  manager-dialog.cpp  manager-dialog.hpp  multiview-instance-serialize-output.cpp  multiview-instance-serialize-signal.cpp  multiview-instance-serialize-visual.cpp  multiview-instance-serialize.hpp  multiview-instance.cpp  multiview-instance.hpp  multiview-ndi-runtime.cpp  multiview-output-ndi.cpp  multiview-output-spout.cpp  (+30 more)
